加了个网址头像

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="short-icon" href="./static/favicon.png" >
     <title>博客（大概</title>
 </head>
 <body>
     <h1>你好</h1>
+    <h1>这里是测试博客</h1>
+    <h1>网址图片是星奏</h1>
 </body>
 </html>
