--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="short-icon" href="./static/favicon.png" >
+    <link rel="shortcut icon" href="./static/favicon.png" >
     <title>博客（大概</title>
 </head>
 <body>
