--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <h1>你好</h1>
     <h1>这里是测试博客</h1>
-    <h1>网址图片是星奏</h1>
+    <h1>网址头像是星奏</h1>
 </body>
+<script>
+    console.log("这里能用js吗");
+</script>
 </html>
