--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0，user-scalable=no,minimum-scale=1,maximum-scale=1">
     <link rel="shortcut icon" href="./static/favicon.png">
+    <link rel="stylesheet" href="./index.css">
     <title>博客（大概</title>
 </head>
 
@@ -13,7 +14,10 @@
     <h1>你好</h1>
     <h1>这里是测试博客</h1>
     <h1>网址头像是星奏</h1>
-    <button size="mini">点</button>
+    <h1>背景为什么用黑色</h1>
+    <h1>因为黑色护眼</h1>
+    <h1>而且还能用粉色字体</h1>
+    <!-- <button size="mini">点</button> -->
 </body>
 <script src="./libs/better-scroll.js"></script>
 <script src="./libs/zepto.js"></script>
@@ -21,9 +25,9 @@
 <script src="./libs/swiper.min.js"></script>
 <script>
     $(function () {
-        $(button).onclick(function () {
-            console.log("这里能用js吗");
-        })
+        // $("button").click(function () {
+        //     console.log("这里能用js吗");
+        // })
     })
 </script>
 
