加了假目录

--- a/index.html
+++ b/index.html
@@ -9,13 +9,26 @@
 </head>
 
 <body>
-    <h1>你好</h1>
-    <h1>这里是测试博客</h1>
-    <h1>网址头像是星奏</h1>
-    <h1>背景为什么用黑色</h1>
-    <h1>因为黑色护眼</h1>
-    <h1>而且还能用粉色字体</h1>
-    <!-- <button size="mini">点</button> -->
+<header>
+    <div>
+        <h1>你好</h1>
+        <h1>这里是测试博客</h1>
+        <h1>网址头像是星奏</h1>
+        <h1>背景为什么用黑色</h1>
+        <h1>因为黑色护眼</h1>
+        <h1>而且还能用粉色字体</h1>
+    </div>
+    <nav>
+        <ol>
+            <li><a href="#">目录</a></li>
+            <li><a href="#">目录</a></li>
+            <li><a href="#">目录</a></li>
+            <li><a href="#">目录</a></li>
+            <li><a href="#">目录</a></li>
+            <li><a href="#">目录</a></li>
+        </ol>
+    </nav>
+</header>
 </body>
 <script src="./libs/better-scroll.js"></script>
 <script src="./libs/zepto.js"></script>
