--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我TM好想被残暴正义号踩踏啊</title>
+    <link rel="icon" sizes="any" mask="" href="./img/DK.jpg">
 </head>
 
 <body>
